Changes made to python __init__.py to load smedia data

--- a/UserInterface/index.html
+++ b/UserInterface/index.html
@@ -60,8 +60,11 @@
     <h2>Fetch Data</h2>
     <input id="token" placeholder="Access Token" size="80"><br><br>
     <input id="apiUrl" placeholder="API URL" size="100"><br><br>
-    <button id="fetchBtn">Fetch Data</button>
-
+    <button id="fetch-btn">Fetch Data</button>
+    <div id="tweet-output" style="white-space: pre-wrap; padding: 10px; border: 1px solid #ccc; margin-top: 10px;">
+      <!-- Fetched data will be shown here -->
+    </div>
+    
     <script src="welcome.js"></script>
 </body>
 </html>
