--- a/UserInterface/cybersheild.html
+++ b/UserInterface/cybersheild.html
@@ -43,6 +43,7 @@
       No analysis results yet<br/>
       Enter text and click analyze to begin
     </div>
+    <div id="result-content"></div>
   </div>
 </div>  
         
